Tried to fix <Stack> overflow (no fix for IE).

--- a/src/xp/style/stack.less
+++ b/src/xp/style/stack.less
@@ -5,25 +5,25 @@
 ----------*/
 
 .stack {
-    .stretched();
-    overflow: hidden;
+    //.stretched();
     box-sizing: border-box;
 
     > .content {
         display: flex;
-        min-width: 100%;
-        min-height: 100%; // Doesn't work in IE http://jsfiddle.net/kevinsbennett/LXwF8/1/
-        > div,
-        > span:not(.placeholder) {
+
+        > *:not(.placeholder):not(.stack) {
             flex: none;
         }
     }
-    /* Flow */
+    // Flow
     &.flow-x {
+        min-height: -webkit-min-content;
+        min-height: -moz-min-content;
+        // TODO: IE
         > .content {
             flex-direction: row;
         }
-        /* Items indent */
+        // Items indent
         &.items-indent-05 > .content > *:not(:first-child) {
             margin-left: 0.5em;
         }
@@ -42,10 +42,13 @@
     }
 
     &.flow-y {
+        min-width: -webkit-min-content;
+        min-width: -moz-min-content;
+        // TODO: IE
         > .content {
             flex-direction: column;
         }
-        /* Items indent */
+        // Items indent
         &.items-indent-05 > .content > *:not(:first-child) {
             margin-top: 0.5em;
         }
@@ -62,7 +65,7 @@
             margin-top: 4em;
         }
     }
-    /* Content alignment */
+    // Content alignment
     &.content-align-start > .content {
         justify-content: flex-start;
     }
@@ -74,7 +77,7 @@
     &.content-align-end > .content {
         justify-content: flex-end;
     }
-    /* Items alignment */
+    // Items alignment
     &.items-align-start > .content {
         align-items: flex-start;
     }
@@ -91,7 +94,7 @@
         align-items: stretch;
         -ms-flex-line-pack: stretch;
     }
-    /* Scroll bar */
+    // Scroll bar
     &.scrollbar-none {
         overflow: hidden;
     }
@@ -109,7 +112,7 @@
     &.scrollbar-both {
         overflow: auto;
     }
-    /* Wrapping */
+    // Wrapping
     &.wrapping-nowrap > .content {
         flex-wrap: nowrap;
     }
