--- a/src/xp/style/textbox.less
+++ b/src/xp/style/textbox.less
@@ -12,6 +12,7 @@
     font-size: 1em;
     line-height: 2em;
     min-height: 2em;
+    min-width: 2em;
     padding: 0 0.25em;
     outline: none;
     border: none;
